# tpaq

./: .clang-tidy  CMakeLists.txt  README.md  TexturePacker.cpp  TexturePacker.hpp  compile_commands.json  format.mustache  main.cpp
.clangd/index/: App.hpp.BCC0954F2E3C5DB2.idx  BlendMode.hpp.2908F6C5C85EF540.idx  CircleShape.hpp.D22C77FBBD7319A5.idx  Clipboard.hpp.B116F21F9F0D95F2.idx  Clock.hpp.B52B743698907491.idx  Color.hpp.1A80D83C4F330087.idx  Config.hpp.A2B832995C2F89C0.idx  Config.hpp.D5905E59184C6A34.idx  ConfigFwd.hpp.95DBC8A8471F7ED0.idx  Context.hpp.233FDCB2B7D52A33.idx  ContextSettings.hpp.E6EFACB5EBEA6DEE.idx  ConvexShape.hpp.8CA386D1BA088E2D.idx  Cursor.hpp.3B597721150249F4.idx  Drawable.hpp.9BF3B8B8F90DC92F.idx  Err.hpp.1FB2BDA58280D3CB.idx  Error.hpp.240E1230AB167651.idx  Event.hpp.15FBD8D408D2FD6B.idx  Export.hpp.86533B6FD276B966.idx  Export.hpp.B30EEE4BA46F456D.idx  Export.hpp.EBB407DF059EA0BC.idx  FileInputStream.hpp.85B5005FB7D4E597.idx  Font.hpp.CE4028F1E61F0435.idx  Formatter.hpp.AF117F09620D6319.idx  FormatterFwd.hpp.2724897F2115D058.idx  GlResource.hpp.87A88CD7AAD5D30F.idx  Glsl.hpp.FF2FD4EAF2685649.idx  Glsl.inl.48062B817C413DD4.idx  Glyph.hpp.118B889C74585C4D.idx  Graphics.hpp.A3ACB5F1CD742BD6.idx  Image.hpp.C4EE579F15FD19D9.idx  InputStream.hpp.51D15C83E7CCEC36.idx  Joystick.hpp.EB32E6369176F029.idx  Keyboard.hpp.D5D713268C8F29BC.idx  Lock.hpp.01A9FF0AC062625D.idx  Macros.hpp.7379CB627416C31C.idx  (+285 more)
source/: DefaultFormat.hpp  TexturePacker.cpp  TexturePacker.hpp
test/: CMakeLists.txt  result.json
test/source/: pack.cpp
